--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,30 +22,18 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
  
   <!-- jQuery & jQuery UI -->
-  <%= stylesheet_link_tag "/ui/themes/ui-lightness/jquery-ui-1.8.15.custom.css", :cache => true %>
-  <%= javascript_include_tag "jquery", "/ui/ui/jquery-ui-1.8.15.custom.js", "plugins", :cache => "jquery" %>
+  <%= stylesheet_link_tag "application" %>
+  <%= javascript_include_tag "application" %>
 
-  <%= javascript_include_tag "rails", "application", :cache => true %>
-
-  <!-- CSS: implied media="all" -->
-  <%= stylesheet_link_tag :all, :media => "all", :cache => "styles" %>
-
-  <!-- More ideas for your <head> here: h5bp.com/docs/#head-Tips -->
-
-  <!-- All JavaScript at the bottom, except for Modernizr and Respond.
-       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
-       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-  <%= javascript_include_tag "modernizr", :cache => "modernizer" %>
-
-
-  <%= yield :head %>
 </head>
 
 <body>	
+<div id="wrapper">
+<div class="b-head-bg">
   <div class="container_16">
- 	 <div class="b-head">
-	  	<div class="b-head__logo grid_2">
-		</div>
+ 	 <div class="b-head grid_16">
+		<%= link_to_unless_current image_tag('logo.png', :class => 'l-left'), '/' %>
+		</a>
 		<div class="b-head__auth grid_1 prefix_13">
 			<input class="b-head__login black" type="button" value="Войти" />
 			<div class="b-head__login_form">
@@ -55,7 +43,7 @@
 					<input id="login_remember_me" type="checkbox"><label for="login_remember_me"> запомнить меня</label>
 				</p>
 				<p class="b-head__block">
-					<input type="button" value="Войти" />
+					<input type="button" value="Войти" class="t-medium"/>
 				</p>
 				<p class="b-head__block">
 					<a href="#">вспомнить пароль</a>
@@ -63,11 +51,17 @@
 			</div>
 		</div>
 	  </div>
+	</div>
   </div>
 
   <%= yield %> <!--! end of #container -->
 
   <div class="clear"></div>
+
+</div>
+<!-- end div#wrapperer -->
+
+<div id="footer">
   <hr class="b-hr" />
   <div class="container_16">
 	  <table class="b-footer">
@@ -86,7 +80,7 @@
 		</td>
 	  </table>
   </div>
-
+</div>
   <!-- JavaScript at the bottom for fast page loading -->
 
 
