--- a/app/views/missings/_characteristic.html.erb
+++ b/app/views/missings/_characteristic.html.erb
@@ -65,6 +65,9 @@
       <li class="b-form__radio_element">
         <%= f.radio_button :man_hair_color, 3 %> <%= f.label :man_hair_color_3, "рыжие" %>
       </li>
+	  <li class="b-form__radio_element">
+        <%= f.radio_button :man_hair_color, 4 %> <%= f.label :man_hair_color_4, "седые" %>
+      </li>
       <li class="b-form__radio_element b-form__subfield">
         <%= f.radio_button :man_hair_color, 0 %> <%= f.label :man_hair_color_0, "другие" %> <br />
         <%= f.text_field :man_hair_color_another, :class => "b-form__text_another" %> 
