--- a/app/views/missings/_form.html.erb
+++ b/app/views/missings/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @missing, :url => "/add_missing/save_step.json", :remote => true, :html => { 
+	:multipart => true,
 	:next_step => "/add_missing/" + @missing.next_step,
 	:previous_step => "/add_missing/" + @missing.previous_step } do |f| %>
 
@@ -25,11 +26,11 @@
 		<%= f.submit "Следующий шаг", :class => "b-form__next_button" unless @missing.last_step?  %>
 		<%= f.submit "Опубликовать объявление", :class => "b-form__save_button green" if @missing.last_step?  %>
 	</div>
-	
+
 </div>
 </div>
 
-</div>
+
 <div class="clear"></div>
 <!-- End grid_16 and container -->
 <div class="b-form__action_panel">
