--- a/app/views/missings/_place_fields.html.erb
+++ b/app/views/missings/_place_fields.html.erb
@@ -1,13 +1,15 @@
-<% unless f.object.address %>
+
+<%= form.fields_for :places do |place_form| %>
+<% unless place_form.object.address %>
 <div class="b-form__nested b-form__add_place">
   <div class="b-padding_1">	
   	<div class="b-form__field">
-	    <%= f.label :address, "Адрес", :class => "b-form__label" %>
-	    <%= f.text_field :address, :class => "b-form__nested_field b-form__add_place_address" %>
+	    <%= place_form.label :address, "Адрес", :class => "b-form__label" %>
+	    <%= place_form.text_field :address, :class => "b-form__nested_field b-form__add_place_address" %>
 	  </div>
 	  <div class="b-form__field">
-	    <%= f.label :name, "Что это за место", :class => "b-form__label" %>
-	    <%= f.text_field :name, :class => "b-form__nested_field b-form__add_place_name" %>
+	    <%= place_form.label :name, "Что это за место", :class => "b-form__label" %>
+	    <%= place_form.text_field :name, :class => "b-form__nested_field b-form__add_place_name" %>
 	    <div class="b-form__field_description" for="missing_places_attributes_0_name">
 	      <span>Например: </span>
 	 	  <span class="b-form__samples_element b-pseudo_link">дом</span>,
@@ -17,8 +19,8 @@
 	    </div> 
 	  </div>
 	  <div class="b-form__field">
-	    <%= f.label :description, "Подробнее об этом месте", :class => "b-form__label" %>
-	    <%= f.text_area :description, :rows => 4, :class => "b-form__nested_field b-form__add_place_description" %>
+	    <%= place_form.label :description, "Подробнее об этом месте", :class => "b-form__label" %>
+	    <%= place_form.text_area :description, :rows => 4, :class => "b-form__nested_field b-form__add_place_description" %>
 	    <p class="b-form__field_description">Как называется и чем там занимался</p>
 	  </div>
    	  
@@ -31,17 +33,18 @@
 <% else %>
 <div class="b-form__field b-form__place">
 	<div class="b-form__label">
-		<%= f.object.name %>
+		<%= place_form.object.name %>
 		<div class="b-form__field_edit_action t-normal">
 			<%= tag :input, { :type => "button", :value => "редактировать", :class => "b-form__place_edit silver_action" } %>
 			<%= tag :input, { :type => "button", :value => "удалить", :class => "b-form__place_delete red_action" } %>
 		</div>
 	</div>
-	<p><%= f.object.description %></p>
-	<p class="t-small"><%= f.object.address %></p>
-	<%= f.hidden_field :name %>
-	<%= f.hidden_field :address %>
-	<%= f.hidden_field :description %>
-	<%= f.hidden_field :_destroy %>
+	<p><%= place_form.object.description %></p>
+	<p class="t-small"><%= place_form.object.address %></p>
+	<%= place_form.hidden_field :name %>
+	<%= place_form.hidden_field :address %>
+	<%= place_form.hidden_field :description %>
+	<%= place_form.hidden_field :_destroy %>
 </div>
+<% end %>
 <% end %>
