--- a/app/views/missings/_common.html.erb
+++ b/app/views/missings/_common.html.erb
@@ -25,7 +25,7 @@
 
   <div class="b-form__field">
     <%= f.label :man_age, "Возраст", :class => "b-form__label" %>
-    <%= f.text_field :man_age, :class => "b-form__text_age" %> <span class="man_age_sign">лет</span>
+    <%= f.text_field :man_age, :class => "b-form__text_age" %> <span class="man_age_sign"><%= Russian.p f.object.man_age.to_i, 'год', 'года', 'лет' %> </span>
     <p>
     	<%= f.label :birthday, "или день рождения" %>
     	
