--- a/app/views/missings/show.html.erb
+++ b/app/views/missings/show.html.erb
@@ -47,7 +47,7 @@
 	<div class="t-medium">Личное сообщение автору</div>
 	<%= form_for @message, :url => '/send_message.json', :remote => true do |message| %>
         <%= message.hidden_field :account_id %>           
-		<%= message.text_area :message, :rows => 4, :class => "b-missing__add_comment", :placeholder => "Текст сообщения",  %>   
+		<%= message.text_area :message, :rows => 4, :class => "b-missing__add_comment", :placeholder => "Текст сообщения" %>   
 		<p class="b-missing__send_message_field">
 		<%= message.label :name, "Ваше имя" %><br/>
 		<%= message.text_field :name %>  
@@ -120,7 +120,7 @@
 	
 	<div class="b-missing__add_comment">
 	<div class="t-medium">Комментировать</div>
-	<%= form_for @discussion, :url => '/missing/add_comment.json', :remote => true, :class => "new_discussion",  do |comment| %>
+	<%= form_for @discussion, :url => '/missing/add_comment.json', :remote => true, :class => "new_discussion"  do |comment| %>
         <%= comment.hidden_field :missing_id %>
         <%= comment.hidden_field :user_id %>
 		<%= comment.text_area :comment, :rows => 4, :class => "b-missing__add_comment" %>
