Update missing and report

--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -205,7 +205,7 @@ input[type="text"] {
 
 /* Обрамление кнопки */
 .b-form__button_corner {
-	background: #f5f5f5;
+	background: #eef2f8;
 		
 	display: inline-block;
 	padding: 7px;
@@ -346,4 +346,28 @@ input[type="text"] {
 .b-form-checkbox label.focus, 
 .b-form-radio label.focus {
 	outline: 1px dotted #ccc;
+}
+                                   
+        
+
+/* Возраст и дата рождения */  
+.b-form__ab {
+	margin-top: 11px;
+}                   
+.b-form__ab_or {        
+	color: #666;
+	
+	margin: 0 .5em;
+}            
+
+.b-form__ages, .b-form__birthday {
+	display: inline-block;
+}                        
+
+.b-form__ages {
+	width: 5em;
+}               
+
+.b-form__birthday {
+	margin-left: 3.5em;
 }
