--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
  
   <!-- jQuery & jQuery UI -->
-  <%= stylesheet_link_tag "application" %>
+  <%= stylesheet_link_tag "application" %>        
+	<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e5c782a66f297f6"></script>
   <%= javascript_include_tag "application" %>
 
 </head>
