--- a/app/views/missings/_common.html.erb
+++ b/app/views/missings/_common.html.erb
@@ -24,13 +24,15 @@
 <!-- Входим див, после hr -->
 
   <div class="b-form__field">
-    <%= f.label :man_age, "Возраст", :class => "b-form__label" %>
-    <%= f.text_field :man_age, :class => "b-form__text_age" %> <span class="man_age_sign"><%= Russian.p f.object.man_age.to_i, 'год', 'года', 'лет' %> </span>
-    <p>
-    	<%= f.label :birthday, "или день рождения" %>
-    	
-    	<%= f.date_select :birthday, :order => [:day, :month, :year], :start_year => 1900, :end_year => Time.now.year, :default => { :day => 1, :month => 1, :year => 1988 }  %>
-	</p>
+    <%= f.label :man_age, "Возраст", :class => "l-inline b-form__label" %><span class="t-medium b-form__ab_or"> или </span><%= f.label :birthday, "дата рождения", :class => "l-inline b-form__label" %>   
+	<div class="clear"></div>      
+	<div class="b-form__ab">
+   	 <p class="b-form__ages">
+	    <%= f.text_field :man_age, :class => "b-form__text_age" %> <span class="man_age_sign"><%= Russian.p f.object.man_age.to_i, 'год', 'года', 'лет' %> </span>               
+	    <p class="b-form__birthday"> 
+	    	<%= f.date_select :birthday, :order => [:day, :month, :year], :start_year => 1900, :end_year => Time.now.year, :default => { :day => 1, :month => 1, :year => 1988 }  %>
+		</p>     
+	 </div>
   </div>
 
 </div>
