--- a/app/views/lost_list/index.html.erb
+++ b/app/views/lost_list/index.html.erb
@@ -34,7 +34,7 @@
 		<div class="b-sidebar__header">
 			Если у вас пропал близкий
 		</div>
-		<%= button_to 'Создайте объявление', 'add_missing',  :class => "green b-sidebar__create_missing t-medium"  %>
+		<%= button_to 'Создайте объявление', '/add_missing/common',  :class => "green b-sidebar__create_missing t-medium"  %>
 		<div class="b-sidebar__hr"></div>
 		<div class="b-sidebar__header">
 			Мы собираем информацию об опасных местах
