--- a/app/views/missings/_common.html.erb
+++ b/app/views/missings/_common.html.erb
@@ -1,3 +1,10 @@
+<script type="text/javascript" charset="utf-8">
+$(function(){	
+	$("#add_photo").click(function() {                                              
+	  $(".b-form__photos input[type=file]").click();
+	});
+});	
+</script>
   <div class="b-form__field">
     <%= f.label :name, "Кто пропал", :class => "b-form__label" %>
     <%= f.text_field :name, :class => "b-form__text_name", :placeholder => "фамилия имя и отчество" %>
