--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,163 @@
 <%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% for message in @user.errors.full_messages %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="field">
-    <%= f.label :username %>
-    <%= f.text_field :username %>
+<div class="container_16">
+<div class="grid_8">
+	
+<div class="b-header">Регистрация детектива
+</div>
+
+ <div class="b-form__field">
+   <%= f.label :username, "Как вас зовут", :class => "b-form__label" %>
+   <%= f.text_field :username, :placeholder => "Фамилия имя отчество",  %>
+ </div>
+
+<!-- Выходи из дива для hr -->
+</div>
+</div>
+<!-- End grid_8 and container from new.html.erb -->
+
+  <div class="clear"></div>
+  <hr class="b-hr form" />    
+
+<div class="container_16">
+<div class="grid_8">
+<!-- Входим див, после hr -->
+
+ <div class="b-form__field">
+   <%= f.label :detective_license, "Лицензия детектива", :class => "b-form__label" %>
+   <%= f.text_field :detective_license, :placeholder => "XX-000000",  %>
+ </div>
+
+<!-- Выходи из дива для hr -->
+</div>
+</div>
+<!-- End grid_8 and container from new.html.erb -->
+
+  <div class="clear"></div>
+  <hr class="b-hr form" />
+
+<div class="container_16">
+<div class="grid_8">
+<!-- Входим див, после hr -->
+
+ <div class="b-form__field">
+   <%= f.label :phone, "Телефон", :class => "b-form__label" %>
+   <%= f.text_field :phone %>
+   <div class="b-form__subfield">
+     <%= f.check_box :callback_phone %> <%= f.label :callback_phone, "связываться со мной по телефону" %>
+   </div>
+ </div>
+
+<!-- Выходи из дива для hr -->
+</div>
+</div>
+<!-- End grid_8 and container from new.html.erb -->
+
+  <div class="clear"></div>
+  <hr class="b-hr form" />
+
+<div class="container_16">
+<div class="grid_8">
+<!-- Входим див, после hr -->
+ 
+<div class="b-form__field">
+  <%= f.label :email, "Электронная почта", :class => "b-form__label" %>
+  <%= f.text_field :email %>
+  <div class="b-form__subfield">
+    <%= f.check_box :callback_email %> <%= f.label :callback_email, "связываться со мной по электронной почте" %>
   </div>
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit %></div>
+</div>
+
+<!-- Выходи из дива для hr -->
+</div>
+</div>
+<!-- End grid_8 and container from new.html.erb -->
+
+  <div class="clear"></div>
+  <hr class="b-hr form" />
+
+<div class="container_16">
+<div class="grid_8">
+<!-- Входим див, после hr -->
+
+  	<div class="b-form__field">
+	  <%= f.label :specialisation, "Ваша специализация в поиске пропавших безвести", :class => "b-form__label" %>
+	<ul class="b-form__radio_list">
+      <li class="b-form__radio_element">
+        <%= f.check_box :specialisation_1 %> <%= f.label :specialisation_1, "интимный бизнес" %>
+      </li>
+      <li class="b-form__radio_element">
+        <%= f.check_box :specialisation_2 %> <%= f.label :specialisation_2, "секты" %>
+      </li>
+      <li class="b-form__radio_element">
+        <%= f.check_box :specialisation_3 %> <%= f.label :specialisation_3, "рабство" %>
+      </li>
+      <li class="b-form__radio_element">
+		<%= f.label :specialisation, "Другие варианты, через запятую" %> <br />
+        <%= f.text_area :specialisation, :rows => 5 %> 
+      </li>                            
+	  <li>
+		<div class="b-form__field_description">
+	      <span>Например: </span>
+	 	  <span class="b-form__samples_element b-pseudo_link">скрывающиеся</span>,
+	      <span class="b-form__samples_element b-pseudo_link">бегущие</span>,
+	      <span class="b-form__samples_element b-pseudo_link">утраченные</span>
+	    </div>
+	  </li>
+    </ul>
+	</div>
+
+<!-- Выходи из дива для hr -->
+</div>
+</div>
+<!-- End grid_8 and container from new.html.erb -->
+
+  <div class="clear"></div>
+  <hr class="b-hr form" />
+
+<div class="container_16">
+<div class="grid_8">
+<!-- Входим див, после hr -->
+
+  	<div class="b-form__field">
+	  <%= f.label :coverage, "Территория работы", :class => "b-form__label" %>
+
+	  <ul class="b-form__radio_list">
+	      <li class="b-form__radio_element">
+	        <%= f.radio_button :coverage, 0 %> <%= f.label :coverage_0, "по всей России" %>
+	      </li>
+	      <li class="b-form__radio_element">
+	        <%= f.radio_button :coverage, 1 %> <%= f.label :coverage_1, "по всему миру" %>
+	      </li>
+	  </ul>
+	</div>
+
+<!-- Выходи из дива для hr -->
+</div>
+</div>
+<!-- End grid_8 and container from new.html.erb -->
+
+  <div class="clear"></div>
+  <hr class="b-hr form" />
+
+<div class="container_16">
+<div class="grid_8">
+<!-- Входим див, после hr -->
+
+	<div class="b-form__field">
+	  <%= f.label :password, "Придумайте пароль для входа", :class => "b-form__label" %>
+	  <%= f.text_field :password %>
+	</div>
+
+	<div class="b-form__actions">
+		<%= f.submit "Перейти к поиску клиентов", :class => "b-form__save_button green" %>
+	</div>       
+
+	</div>
+	</div>
+
+
+	<div class="clear"></div>
+	<!-- End grid_16 and container -->
+	<div class="b-form__action_panel">
+	</div>
 <% end %>
