Update head and remove duplicate files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
 				<div class="b-head__menu_description">
 					Все будут искать потеряшку
 				</div>   
-				<%= button_to 'Разместить объявление', '/add_missing/common', :class => "black",   %> 
+				<%= button_to 'Разместить объявление', '/add_missing/common', :class => "black" %> 
 			</td>
 			<td>
 				<div class="t-medium">Вы детектив</div>
