--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
 
  <div class="b-form__field">
    <%= f.label :username, "Как вас зовут", :class => "b-form__label" %>
-   <%= f.text_field :username, :placeholder => "Фамилия имя отчество",  %>
+   <%= f.text_field :username, :placeholder => "Фамилия имя отчество" %>
  </div>
 
 <!-- Выходи из дива для hr -->
@@ -24,7 +24,7 @@
 
  <div class="b-form__field">
    <%= f.label :detective_license, "Лицензия детектива", :class => "b-form__label" %>
-   <%= f.text_field :detective_license, :placeholder => "XX-000000",  %>
+   <%= f.text_field :detective_license, :placeholder => "XX-000000" %>
  </div>
 
 <!-- Выходи из дива для hr -->
