--- a/app/views/missings/show.html.erb
+++ b/app/views/missings/show.html.erb
@@ -48,7 +48,8 @@
 	<div class="t-medium">Личное сообщение автору</div>
 	<%= form_for @message, :url => '/send_message.json', :remote => true do |message| %>
         <%= message.hidden_field :destination_user_id %>
-		<%= message.text_area :message, :rows => 4, :class => "b-missing__add_comment", :placeholder => "Текст сообщения" %>   
+		<%= message.text_area :message, :rows => 4, :class => "b-missing__add_comment", :placeholder => "Текст сообщения" %>  
+		<% unless logged_in? %> 
 		<p class="b-missing__send_message_field">
 		<%= message.label :name, "Ваше имя" %><br/>
 		<%= message.text_field :name %>  
@@ -60,9 +61,11 @@
 		<p class="b-missing__send_message_field">
 		<%= message.label :phone, "Телефон" %><br/>
 		<%= message.text_field :phone %>       
-		</p>
+		</p> 
+		<% end %> 
 		<%= message.submit "Отправить", :class=> "b-missing__send_message_button" %>     
-		<div class="clear"></div>
+		<div class="clear"></div>           
+		
 	<% end %>
 	</div>
 	
