Update register and missing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -111,7 +111,7 @@
 	</div>
     <div class="b-head__auth grid_1">  
 	    
-		<%= button_to "Выйти", '/logout', :class => "black",  %>  
+		<%= button_to "Выйти", '/logout', :class => "black" %>  
   
  
 	</div>                 
