Add counter, two report, can help

--- a/app/assets/stylesheets/app/b-missing.css
+++ b/app/assets/stylesheets/app/b-missing.css
@@ -42,7 +42,8 @@
 	}    
 	                  
 	input.b-missing__i_saw_in {
-		width: 100px;
+		width: 100px;  
+		margin: 0 .5em;
 	}
 
 .b-missing__photo { 
