--- a/app/assets/stylesheets/app/b-head.css
+++ b/app/assets/stylesheets/app/b-head.css
@@ -39,8 +39,13 @@
 	}                
 	
 	.b-head__auth {
-		margin-top: 1em;
-	}                   
+		margin-top: .5em;
+	}   
+	
+	.b-head__settings {
+		display: block;
+		margin-bottom: .3em;
+	}                
 	
 	.b-head__logined {
 		color: #dedede;
