--- a/app/views/missings/show.html.erb
+++ b/app/views/missings/show.html.erb
@@ -47,8 +47,8 @@
 	<div class="b-missing__send_message">
 	<div class="t-medium">Личное сообщение автору</div>
 	<%= form_for @message, :url => '/send_message.json', :remote => true do |message| %>
-        <%= message.hidden_field :destination_user_id %>
-		<%= message.text_area :message, :rows => 4, :class => "b-missing__add_comment", :placeholder => "Текст сообщения" %>  
+        <%= message.hidden_field :destination_user_id, :value => @missing.user_id %>
+		<%= message.text_area :text, :rows => 4, :class => "b-missing__add_comment", :placeholder => "Текст сообщения" %>  
 		<% unless logged_in? %> 
 		<p class="b-missing__send_message_field">
 		<%= message.label :name, "Ваше имя" %><br/>
