--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -25,7 +25,7 @@
 		
 		<div class="b-report__list">                   
 			<% @inbox.each do |message| %>        
-			<div class="b-missing__comment" message_id="<%= message.id %>">
+			<div class="b-missing__comment" message_id="<%= message.id %>"> 
 				<div class="b-missing__comment_header">
 					<% if message.user.nil? %>
 						<%= link_to "Анонимный комментарий", "", :class => "t-medium b-missing__comment_author" %>    
@@ -33,18 +33,41 @@
 						<%= link_to message.user.username, "", :class => "t-medium b-missing__comment_author" %>    
 					<% end %>
 					<span class="b-missing__comment_date t-small"><%= Russian.strftime message.created_at, "%d %B" %></span>   
-					<%= tag :input, { :type => "button", :value => "Ответить", :class => "b-missing__comment_answer silver_action l-right" } %>
+					<%= tag :input, { :type => "button", :value => "Ответить", :class => "b-report__message_answer silver_action l-right" } %>
 				</div>
 				<div class="b-missing__comment_text comment b-tooltip top silver">
 					<i class="b-tooltip__tail_border"><b class="b-tooltip__tail"></b></i>
 					<div class="b-tooltip__content">
-						<%= message.message %>
+						<%= message.text %>
 					</div>
 				</div>
-			</div>
+			</div>     
+			
+			<% message.messages.each do |sub_message| %>
+			<div class="b-missing__comment sub">
+				<div class="b-missing__comment_header l-left">    
+					<% if sub_message.user.nil? %>
+						<%= link_to "Анонимный комментарий", "", :class => "b-missing__comment_author" %>    
+					<% else %>
+						<%= link_to sub_message.user.username, "", :class => "b-missing__comment_author" %>    
+					<% end %>			
+					<span class="b-missing__comment_date t-small l-right"><%= Russian.strftime sub_message.created_at, "%d %B" %></span>   
+				</div>
+				<div class="b-missing__comment_text">
+					<%= sub_message.text %>
+				</div>
+			</div>	
+			<% end %>
 			<% end %>  
 			
 			
+		</div>
+		<div class="b-report__new_message">
+		<%= form_for @message, :url => '/send_message.json', :remote => true, :class => "b-report__send_message" do |message| %>
+			<%= message.text_area :text, :rows => 4, :class => "b-missing__add_comment", :placeholder => "Текст сообщения" %>   
+			<%= message.submit "Отправить", :class=> "b-missing__send_message_button" %>     
+			<div class="clear"></div>           
+		<% end %> 
 		</div>
 	</div>
 	
@@ -53,7 +76,7 @@
 	   	<div class="b-sidebar b-report__statistic">
 			<p class="b-sidebar__header">Статистика просмотров</p>
 			<p>
-				Количество посещений: <span class="b-report__statistic_red">100</span>
+				Количество посещений: <span class="b-report__statistic_red"><%= @missing.impressionist_count %></span>
 			</p>
 			<p>
 				Детективы: <span class="b-report__statistic_green">35</span>
@@ -61,6 +84,27 @@
 			<p>
 				Остальные: <span class="b-report__statistic_red">65</span>
 			</p>
+		</div>  
+		
+		<div class="b-sidebar b-report__detectives">
+			<p class="b-sidebar__header">Детективы</p>
+			<p class="b-report__detectives_list">
+				Количество посещений: <span class="b-report__statistic_red">100</span>
+			</p>
+			<div class="b-sidebar__hr_100"></div>
+			<p class="b-report__detectives_description">
+				Детективы оказывают платные услуги
+			</p>                                  
+			<%= button_to 'Попросить всех о помощи', '/request/detective_help',  :class => "green t-medium"  %>
+		</div> 
+		
+		<div class="b-sidebar b-report__statistic">
+			<p class="b-sidebar__header">Платные услуги</p>
+		    <ul class="b-sidebar__list b-report__services">
+				<li class="b-sidebar__list_item"><%= link_to "Разместить объявление в газете", "#" %></li>
+				<li class="b-sidebar__list_item"><%= link_to "Подготовить заявления", "#" %></li>
+				<li class="b-sidebar__list_item"><%= link_to "Расклеить объявления", "#" %></li>
+			</ul>
 		</div>
  
 	</div>
